@@ -1,3 +1,9 @@
+2002-04-22  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* lib/smi.c,...: Added a `parser' argument to the loadModule()
+	function so that line numbers can be reported when an imported
+	module cannot be loaded. Thanks to Mark Kaplun and Bill Fenner.
+
 2002-03-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* lib/check.c: Fixed a bug in the range normalization code.
